--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "clsx": "^2.1.1",
     "daisyui": "^5.0.27",
     "lucide-react": "^0.501.0",
-    "next": "^15.3.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -48,19 +48,19 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@types/node": "^22.14.1",
-    "@types/react": "19.1.2",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
     "autoprefixer": "^10.4.17",
-    "eslint": "^9.25.0",
-    "eslint-config-next": "^15.3.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.35",
     "postcss-import": "^16.0.1",
-    "prettier": "^3.5.3",
-    "supabase": "^2.20.12",
+    "prettier": "^3.2.5",
+    "supabase": "^1.145.4",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.3.3"
   }
 }
