--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "daisyui": "^5.0.27",
     "lucide-react": "^0.501.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
@@ -58,7 +59,7 @@
     "postcss": "^8.4.35",
     "postcss-import": "^16.0.1",
     "prettier": "^3.2.5",
-    "supabase": "^1.145.4",
+    "supabase": "^2.20.12",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
