--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   "homepage": "https://github.com/Golonka-Ma/serviceflow-crm#readme",
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@stripe/stripe-js": "^7.1.0",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@upstash/redis": "^1.34.8",
@@ -35,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.27",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.501.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.25",
@@ -43,6 +45,7 @@
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
     "stripe": "^18.0.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
