--- a/supabase/config.toml.example
+++ b/supabase/config.toml.example
@@ -1,6 +1,6 @@
 # A string used to distinguish different Supabase projects on the same host. Defaults to the working
 # directory name when running `supabase init`.
-project_id = "serviceflow-crm"
+project_id = "your-project-id"
 
 [api]
 # Port to use for the API URL.
@@ -75,7 +75,7 @@ url = ""
 
 [auth.external.google]
 enabled = true
-client_id = "113443702086-iklh9u1hhfjh70k7bego78jern5tu0db.apps.googleusercontent.com" # Uzupełnij po utworzeniu projektu w Google Cloud Console
-secret = "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" # Uzupełnij po utworzeniu projektu w Google Cloud Console
+client_id = "your-google-client-id" # Replace with your Google Cloud Console client ID
+secret = "your-google-client-secret" # Replace with your Google Cloud Console client secret
 # Overrides the default auth redirectUrl.
 redirect_uri = "http://localhost:3000/auth/callback" 
